restructure handlers and use buttons instead

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 TELEGRAM_BOT_TOKEN="YOUR_ACTUAL_TELEGRAM_BOT_TOKEN_FROM_BOTFATHER"
-ADMIN_CHAT_ID="YOUR_NUMERIC_ADMIN_USER_CHAT_ID"
+ADMIN_GROUP_CHAT_ID="YOUR_NUMERIC_ADMIN_GROUP_CHAT_ID"
 
 # tmdb api configuration (required for media lookup)
 TMDB_API_KEY="YOUR_TMDB_API_KEY"
-
-# DATABASE_FILE_PATH="./data/my_teleseer.db" # defaults to ./data/database.db if not set
