--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
 TELEGRAM_BOT_TOKEN="YOUR_ACTUAL_TELEGRAM_BOT_TOKEN_FROM_BOTFATHER"
-ADMIN_GROUP_CHAT_ID="YOUR_NUMERIC_ADMIN_GROUP_CHAT_ID"
-
-# tmdb api configuration (required for media lookup)
+ADMIN_CHAT_IDS="COMMA_SEPARATED_ADMIN_CHAT_IDS"
 TMDB_API_KEY="YOUR_TMDB_API_KEY"
